# OmegaV2

./: CMakeLists.txt
assets/: data.cmgt  gamedata.json
include/Core/: Battle.hpp  Event.hpp  Game.hpp  Object.hpp  Scene.hpp  Turn.hpp
include/Entities/: Entity.hpp
include/UI/: Button.hpp  Display.hpp  DisplayText.hpp  Textbox.hpp
src/: main.cpp
src/Core/: Battle.cpp  Event.cpp  Game.cpp  Scene.cpp
src/Entities/: Entity.cpp
src/UI/: Button.cpp  Display.cpp  DisplayText.cpp  Textbox.cpp
